<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gs2d_ros2_driver_msg</name>
  <version>0.0.1</version>
  <description>Messages for gs2d ROS2 driver</description>
  <maintainer email="gs2d@krkrpro.com">Karakuri Products</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/karakuri-products/gs2d-ros2-driver</url>
  <url type="bugtracker">https://github.com/karakuri-products/gs2d-ros2-driver/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
